ColRusParser.py
# Generated from ColRus.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ColRusParser ( Parser ):

    grammarFileName = "ColRus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'si'", "'sino'", "'utilice'", "'funcion'", 
                     "'mientras'", "'para'", "'en'", "'rango'", "'leer'", 
                     "'escribir'", "'graficar'", "'raiz'", "'seno'", "'coseno'", 
                     "'tangente'", "'transpuesta'", "'inversa'", "'matriz'", 
                     "'retornar'", "'regresion'", "'mlp'", "'red_neuronal'", 
                     "'cargar_modelo'", "'guardar_modelo'", "'predecir'", 
                     "'='", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "SI", "SINO", "UTILICE", "FUNCION", "MIENTRAS", 
                      "PARA", "EN", "RANGO", "LEER", "ESCRIBIR", "GRAFICAR", 
                      "RAIZ", "SENO", "COSENO", "TANGENTE", "TRANSPUESTA", 
                      "INVERSA", "MATRIZ", "RETORNAR", "REGRESION", "MLP", 
                      "RED", "CARGAR_MODELO", "GUARDAR_MODELO", "PREDECIR", 
                      "IGUAL", "EQ", "NE", "GE", "LE", "GT", "LT", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "POW", "PARENIZQ", "PARENDER", 
                      "CORCHETEIZQ", "CORCHETEDER", "LLAVEIZQ", "LLAVEDER", 
                      "COMA", "PUNTOCOMA", "NUMBER", "STRING", "BOOLEANO", 
                      "ID", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_usoModulo = 2
    RULE_asignacion = 3
    RULE_condicional = 4
    RULE_ciclo = 5
    RULE_cicloMientras = 6
    RULE_cicloPara = 7
    RULE_bloque = 8
    RULE_declaracionFuncion = 9
    RULE_parametros = 10
    RULE_llamadaFuncion = 11
    RULE_expresion = 12
    RULE_asignacionExpr = 13
    RULE_igualdadExpr = 14
    RULE_relacionalExpr = 15
    RULE_aditivoExpr = 16
    RULE_multiplicativoExpr = 17
    RULE_potenciaExpr = 18
    RULE_unaryExpr = 19
    RULE_primary = 20
    RULE_funcionMatematica = 21
    RULE_funcionMatriz = 22
    RULE_funcionArchivo = 23
    RULE_argumentos = 24
    RULE_funcionGrafica = 25
    RULE_matrizLiteral = 26
    RULE_listaFilas = 27
    RULE_fila = 28
    RULE_listaValores = 29
    RULE_literal = 30
    RULE_retorno = 31
    RULE_listaLiteral = 32
    RULE_accesoIndice = 33
    RULE_funcionIA = 34

    ruleNames =  [ "programa", "instruccion", "usoModulo", "asignacion", 
                   "condicional", "ciclo", "cicloMientras", "cicloPara", 
                   "bloque", "declaracionFuncion", "parametros", "llamadaFuncion", 
                   "expresion", "asignacionExpr", "igualdadExpr", "relacionalExpr", 
                   "aditivoExpr", "multiplicativoExpr", "potenciaExpr", 
                   "unaryExpr", "primary", "funcionMatematica", "funcionMatriz", 
                   "funcionArchivo", "argumentos", "funcionGrafica", "matrizLiteral", 
                   "listaFilas", "fila", "listaValores", "literal", "retorno", 
                   "listaLiteral", "accesoIndice", "funcionIA" ]

    EOF = Token.EOF
    SI=1
    SINO=2
    UTILICE=3
    FUNCION=4
    MIENTRAS=5
    PARA=6
    EN=7
    RANGO=8
    LEER=9
    ESCRIBIR=10
    GRAFICAR=11
    RAIZ=12
    SENO=13
    COSENO=14
    TANGENTE=15
    TRANSPUESTA=16
    INVERSA=17
    MATRIZ=18
    RETORNAR=19
    REGRESION=20
    MLP=21
    RED=22
    CARGAR_MODELO=23
    GUARDAR_MODELO=24
    PREDECIR=25
    IGUAL=26
    EQ=27
    NE=28
    GE=29
    LE=30
    GT=31
    LT=32
    PLUS=33
    MINUS=34
    MUL=35
    DIV=36
    MOD=37
    POW=38
    PARENIZQ=39
    PARENDER=40
    CORCHETEIZQ=41
    CORCHETEDER=42
    LLAVEIZQ=43
    LLAVEDER=44
    COMA=45
    PUNTOCOMA=46
    NUMBER=47
    STRING=48
    BOOLEANO=49
    ID=50
    WS=51
    COMENTARIO=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ColRusParser.EOF, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.InstruccionContext,i)


        def getRuleIndex(self):
            return ColRusParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ColRusParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.instruccion()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1125899966090874) != 0)):
                    break

            self.state = 75
            self.match(ColRusParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(ColRusParser.AsignacionContext,0)


        def PUNTOCOMA(self):
            return self.getToken(ColRusParser.PUNTOCOMA, 0)

        def usoModulo(self):
            return self.getTypedRuleContext(ColRusParser.UsoModuloContext,0)


        def condicional(self):
            return self.getTypedRuleContext(ColRusParser.CondicionalContext,0)


        def declaracionFuncion(self):
            return self.getTypedRuleContext(ColRusParser.DeclaracionFuncionContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(ColRusParser.LlamadaFuncionContext,0)


        def funcionArchivo(self):
            return self.getTypedRuleContext(ColRusParser.FuncionArchivoContext,0)


        def funcionGrafica(self):
            return self.getTypedRuleContext(ColRusParser.FuncionGraficaContext,0)


        def retorno(self):
            return self.getTypedRuleContext(ColRusParser.RetornoContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(ColRusParser.CicloContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_instruccion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = ColRusParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.asignacion()
                self.state = 78
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.usoModulo()
                self.state = 81
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.declaracionFuncion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.llamadaFuncion()
                self.state = 86
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.funcionArchivo()
                self.state = 89
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 91
                self.funcionGrafica()
                self.state = 92
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.retorno()
                self.state = 95
                self.match(ColRusParser.PUNTOCOMA)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 97
                self.ciclo()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsoModuloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UTILICE(self):
            return self.getToken(ColRusParser.UTILICE, 0)

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_usoModulo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsoModulo" ):
                return visitor.visitUsoModulo(self)
            else:
                return visitor.visitChildren(self)




    def usoModulo(self):

        localctx = ColRusParser.UsoModuloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usoModulo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ColRusParser.UTILICE)
            self.state = 101
            self.match(ColRusParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def IGUAL(self):
            return self.getToken(ColRusParser.IGUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(ColRusParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = ColRusParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ColRusParser.ID)
            self.state = 104
            self.match(ColRusParser.IGUAL)
            self.state = 105
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(ColRusParser.SI, 0)

        def PARENIZQ(self):
            return self.getToken(ColRusParser.PARENIZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(ColRusParser.ExpresionContext,0)


        def PARENDER(self):
            return self.getToken(ColRusParser.PARENDER, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.BloqueContext)
            else:
                return self.getTypedRuleContext(ColRusParser.BloqueContext,i)


        def SINO(self):
            return self.getToken(ColRusParser.SINO, 0)

        def getRuleIndex(self):
            return ColRusParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = ColRusParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ColRusParser.SI)
            self.state = 108
            self.match(ColRusParser.PARENIZQ)
            self.state = 109
            self.expresion()
            self.state = 110
            self.match(ColRusParser.PARENDER)
            self.state = 111
            self.bloque()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 112
                self.match(ColRusParser.SINO)
                self.state = 113
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cicloMientras(self):
            return self.getTypedRuleContext(ColRusParser.CicloMientrasContext,0)


        def cicloPara(self):
            return self.getTypedRuleContext(ColRusParser.CicloParaContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_ciclo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCiclo" ):
                return visitor.visitCiclo(self)
            else:
                return visitor.visitChildren(self)




    def ciclo(self):

        localctx = ColRusParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ciclo)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.cicloMientras()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.cicloPara()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloMientrasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(ColRusParser.MIENTRAS, 0)

        def PARENIZQ(self):
            return self.getToken(ColRusParser.PARENIZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(ColRusParser.ExpresionContext,0)


        def PARENDER(self):
            return self.getToken(ColRusParser.PARENDER, 0)

        def bloque(self):
            return self.getTypedRuleContext(ColRusParser.BloqueContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_cicloMientras

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloMientras" ):
                return visitor.visitCicloMientras(self)
            else:
                return visitor.visitChildren(self)




    def cicloMientras(self):

        localctx = ColRusParser.CicloMientrasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cicloMientras)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ColRusParser.MIENTRAS)
            self.state = 121
            self.match(ColRusParser.PARENIZQ)
            self.state = 122
            self.expresion()
            self.state = 123
            self.match(ColRusParser.PARENDER)
            self.state = 124
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(ColRusParser.PARA, 0)

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def EN(self):
            return self.getToken(ColRusParser.EN, 0)

        def RANGO(self):
            return self.getToken(ColRusParser.RANGO, 0)

        def PARENIZQ(self):
            return self.getToken(ColRusParser.PARENIZQ, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.ExpresionContext,i)


        def COMA(self):
            return self.getToken(ColRusParser.COMA, 0)

        def PARENDER(self):
            return self.getToken(ColRusParser.PARENDER, 0)

        def bloque(self):
            return self.getTypedRuleContext(ColRusParser.BloqueContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_cicloPara

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloPara" ):
                return visitor.visitCicloPara(self)
            else:
                return visitor.visitChildren(self)




    def cicloPara(self):

        localctx = ColRusParser.CicloParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cicloPara)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(ColRusParser.PARA)
            self.state = 127
            self.match(ColRusParser.ID)
            self.state = 128
            self.match(ColRusParser.EN)
            self.state = 129
            self.match(ColRusParser.RANGO)
            self.state = 130
            self.match(ColRusParser.PARENIZQ)
            self.state = 131
            self.expresion()
            self.state = 132
            self.match(ColRusParser.COMA)
            self.state = 133
            self.expresion()
            self.state = 134
            self.match(ColRusParser.PARENDER)
            self.state = 135
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVEIZQ(self):
            return self.getToken(ColRusParser.LLAVEIZQ, 0)

        def LLAVEDER(self):
            return self.getToken(ColRusParser.LLAVEDER, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColRusParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(ColRusParser.InstruccionContext,i)


        def getRuleIndex(self):
            return ColRusParser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = ColRusParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ColRusParser.LLAVEIZQ)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1125899966090874) != 0):
                self.state = 138
                self.instruccion()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(ColRusParser.LLAVEDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(ColRusParser.FUNCION, 0)

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def PARENIZQ(self):
            return self.getToken(ColRusParser.PARENIZQ, 0)

        def PARENDER(self):
            return self.getToken(ColRusParser.PARENDER, 0)

        def bloque(self):
            return self.getTypedRuleContext(ColRusParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(ColRusParser.ParametrosContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_declaracionFuncion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionFuncion" ):
                return visitor.visitDeclaracionFuncion(self)
            else:
                return visitor.visitChildren(self)




    def declaracionFuncion(self):

        localctx = ColRusParser.DeclaracionFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaracionFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(ColRusParser.FUNCION)
            self.state = 147
            self.match(ColRusParser.ID)
            self.state = 148
            self.match(ColRusParser.PARENIZQ)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 149
                self.parametros()


            self.state = 152
            self.match(ColRusParser.PARENDER)
            self.state = 153
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ColRusParser.ID)
            else:
                return self.getToken(ColRusParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ColRusParser.COMA)
            else:
                return self.getToken(ColRusParser.COMA, i)

        def getRuleIndex(self):
            return ColRusParser.RULE_parametros

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = ColRusParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ColRusParser.ID)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 156
                self.match(ColRusParser.COMA)
                self.state = 157
                self.match(ColRusParser.ID)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlamadaFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColRusParser.ID, 0)

        def PARENIZQ(self):
            return self.getToken(ColRusParser.PARENIZQ, 0)

        def PARENDER(self):
            return self.getToken(ColRusParser.PARENDER, 0)

        def argumentos(self):
            return self.getTypedRuleContext(ColRusParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_llamadaFuncion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamadaFuncion" ):
                return visitor.visitLlamadaFuncion(self)
            else:
                return visitor.visitChildren(self)




    def llamadaFuncion(self):

        localctx = ColRusParser.LlamadaFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_llamadaFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(ColRusParser.ID)
            self.state = 164
            self.match(ColRusParser.PARENIZQ)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2113836940787200) != 0):
                self.state = 165
                self.argumentos()


            self.state = 168
            self.match(ColRusParser.PARENDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacionExpr(self):
            return self.getTypedRuleContext(ColRusParser.AsignacionExprContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_expresion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = ColRusParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.asignacionExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def igualdadExpr(self):
            return self.getTypedRuleContext(ColRusParser.IgualdadExprContext,0)


        def IGUAL(self):
            return self.getToken(ColRusParser.IGUAL, 0)

        def asignacionExpr(self):
            return self.getTypedRuleContext(ColRusParser.AsignacionExprContext,0)


        def getRuleIndex(self):
            return ColRusParser.RULE_asignacionExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacionExpr" ):
                return visitor.visitAsignacionExpr(self)
            else:
                return visitor.visitChildren(self)




    def asignacionExpr(self):
